# SalamanderPianoApp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_android.ps1  build_windows.ps1  convert_flac_to_wav.ps1  convert_flac_to_wav_stereo.ps1  resample_to_48k.ps1
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/res/values/: string.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/sfz/: Salamander Grand Piano V3 Mobile.sfz  Salamander Grand Piano V3.sfz
android/app/src/main/res/xml/: juce_midi_virtual_bytestream.xml  juce_midi_virtual_ump.xml
docs/: CNAME  index.html
sfz/Data/: notes_mobile.txt
src/: LookAndFeel.cpp  LookAndFeel.h  MidiDeviceManager.cpp  MidiDeviceManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleManager.cpp  SampleManager.h  SfizzEngine.cpp  SfizzEngine.h
src/ui/: ControlPanel.cpp  ControlPanel.h  HeaderPanel.cpp  HeaderPanel.h  MidiStatusBar.cpp  MidiStatusBar.h  PianoKeyboard.cpp  PianoKeyboard.h  TroubleshootPanel.cpp  TroubleshootPanel.h
